@@ -2,6 +2,7 @@
 * configuration: remove support for importing configurations from Kadu 0.9 and earlier (Vogel)
 * configuration: update configuration file format (Vogel)
 * facebook_protocol: support avatars (Vogel)
+* jabber_protocol: #3163 fixed: be nicer for SSL certificated for Hangouts on different domains (Vogel)
 
 +++ version 5.0-alpha1:
 * plugins: #2796 fixed: do not bother user with idle plugin (Vogel)
